--- a/index.html
+++ b/index.html
@@ -189,9 +189,13 @@
         </div>
         <div class="mainBody-tile">
           <h3>Ryan</h3>
+          <h4>(hiteacheryouare)</h4>
           <img src="https://avatars.githubusercontent.com/u/82683251?v=4" />
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit et delectus fugiat eius, quisquam eveniet consectetur rerum eum quibusdam voluptatum cum commodi nemo dolorum itaque error labore unde. Eum, quis?
+            Ryan is a software developer as a hobbiest.
+            He is currently learning many differnt languages and their use cases.
+            Some of these languages include: HTML, CSS, JavaScript, Python, C#, TypeScript, and git.
+            Ryan is working on a variety of projects which you can see in his <a href="https://github.com/hiteacheryouare/projects">GitHub repository</a>
           </p>
         </div>
       </div>
