finished my bio
@HedgehogDubz  finish yours

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
       <div class="mainBody-grid">
         <div class="mainBody-tile">
           <h3>Tristan</h3>
+          <h5> (HedgehogDubz) </h5>
           <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210px" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt ex qui dolorum a obcaecati sequi amet tempora alias, nisi ea, nam nostrum commodi deleniti. Tempora facilis similique culpa fuga!.
@@ -189,12 +190,12 @@
         </div>
         <div class="mainBody-tile">
           <h3>Ryan</h3>
-          <h4>(hiteacheryouare)</h4>
+          <h5> (hiteacheryouare) </h5>
           <img src="https://avatars.githubusercontent.com/u/82683251?v=4" />
           <p>
             Ryan is a software developer as a hobbiest.
             He is currently learning many differnt languages and their use cases.
-            Some of these languages include: HTML, CSS, JavaScript, Python, C#, TypeScript, and git.
+            Some of these languages include: HTML, CSS, JavaScript, Python, C#, TypeScript, and Kotlin.
             Ryan is working on a variety of projects which you can see in his <a href="https://github.com/hiteacheryouare/projects">GitHub repository</a>
           </p>
         </div>
