added alts for the images

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k"
           width="100"
           height="70"
+          alt="hedgehog logo"
         />
       </a>
       <div
@@ -183,7 +184,7 @@
         <div class="mainBody-tile">
           <h3>Tristan</h3>
           <h5> (HedgehogDubz) </h5>
-          <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210px" />
+          <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210px" alt="tristan's avatar" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt ex qui dolorum a obcaecati sequi amet tempora alias, nisi ea, nam nostrum commodi deleniti. Tempora facilis similique culpa fuga!.
           </p>
@@ -191,7 +192,7 @@
         <div class="mainBody-tile">
           <h3>Ryan</h3>
           <h5> (hiteacheryouare) </h5>
-          <img src="https://avatars.githubusercontent.com/u/82683251?v=4" />
+          <img src="https://avatars.githubusercontent.com/u/82683251?v=4" alt="ryan's avatar" />
           <p>
             Ryan is a software developer as a hobbiest.
             He is currently learning many differnt languages and their use cases.
@@ -205,7 +206,7 @@
       <div class="footer">
         <br>
         <br>
-        <img src="assets/PPio logo.png" width="25%"/>
+        <img src="assets/PPio logo.png" width="25%" alt="porky productions logo"/>
         <br>
         <p>
           Porky Productions is a group of highly established individuals namely
