--- a/Models.html
+++ b/Models.html
@@ -31,6 +31,7 @@
           src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k"
           width="100"
           height="70"
+          alt="hedgehog logo"
         />
       </a>
       <div
@@ -99,7 +100,7 @@
     <div class="footer">
       <br>
       <br>
-      <img src="assets/PPio logo.png" width="25%" class="image-center"/>
+      <img src="assets/PPio logo.png" width="25%" class="image-center" alt="porky productions logo"/>
       <br>
       <p class="text-center">
         Porky Productions is a group of highly established individuals namely
