--- a/develop.html
+++ b/develop.html
@@ -88,7 +88,7 @@
     <div class="footer">
       <br>
       <br>
-      <img src="assets/PPio logo.png" width="25%" class="image-center"/>
+      <img src="assets/PPio logo.png" width="25%" class="image-center" alt="Porky Prodcutions Logo"/>
       <br>
       <p class="text-center">
         Porky Productions is a group of highly established individuals namely
