added a new gradient section

--- a/index.html
+++ b/index.html
@@ -58,168 +58,198 @@
       </div>
       <br />
       <div class="mainBody">
-        <div class="mainBody-intro-container">
-          <div class="mainBody-intro">
-            <h3>What is Porky Productions?</h3>
-            Porky Productions is a group of highly established individuals
-            namely Tristan and Ryan, who are on the path for technological
-            development in many areas. This website is meant to showcase our
-            accomplishments as well as to create something that we can be proud
-            about.
+          <div class="mainBody-intro-container">
+              <div class="mainBody-intro">
+                  <h3>What is Porky Productions?</h3>
+                  Porky Productions is a group of highly established individuals
+                  namely Tristan and Ryan, who are on the path for technological
+                  development in many areas. This website is meant to showcase our
+                  accomplishments as well as to create something that we can be proud
+                  about.
+              </div>
           </div>
-        </div>
-        <div class="mainBody-grid">
-          <div class="mainBody-tile">
-            <h3>You Make Games?</h3>
-            <p>
-              Current games are being produced by Hedgehog Studios and is
-              setting a new foundation for releases of cool, slick games that
-              everyone can enjoy! Follow our adventure and perhaps download our
-              games here!
-            </p>
-            <a href="games.html">Games Tab</a>
+          <div class="mainBody-grid">
+              <div class="mainBody-tile">
+                  <h3>You Make Games?</h3>
+                  <p>
+                      Current games are being produced by Hedgehog Studios and is
+                      setting a new foundation for releases of cool, slick games that
+                      everyone can enjoy! Follow our adventure and perhaps download our
+                      games here!
+                  </p>
+                  <a href="games.html">Games Tab</a>
+              </div>
+              <div class="mainBody-tile">
+                  <h3>Porky Productions 3D Prints</h3>
+                  <p>
+                      Porky Productions also specialize in building real world models
+                      using our 3D printers. Our creations, and models can be viewed
+                      here!
+                  </p>
+                  <a href="3DPrints.html">3D Prints Tab</a>
+              </div>
           </div>
-          <div class="mainBody-tile">
-            <h3>Porky Productions 3D Prints</h3>
-            <p>
-              Porky Productions also specialize in building real world models
-              using our 3D printers. Our creations, and models can be viewed
-              here!
-            </p>
-            <a href="3DPrints.html">3D Prints Tab</a>
+          <div class="mainBody-grid">
+              <div class="mainBody-tile">
+                  <h3>Porky Productions Models</h3>
+                  <p>
+                      Porky Productions also specialize in building real world models
+                      using our 3D printers. Our creations, and models can be viewed
+                      here!
+                  </p>
+                  <a href="Models.html">Models Tab</a>
+              </div>
+              <div class="mainBody-tile">
+                  <h3>Porky Productions Developments</h3>
+                  <p>
+                      Porky Productions also specialize in building software that can change the world. Our Developments can be seen here!
+                  </p>
+                  <a href="develop.html">Developments Tab</a>
+              </div>
           </div>
-        </div>
-        <div class="mainBody-grid">
-          <div class="mainBody-tile">
-            <h3>Porky Productions Models</h3>
-            <p>
-              Porky Productions also specialize in building real world models
-              using our 3D printers. Our creations, and models can be viewed
-              here!
-            </p>
-            <a href="Models.html">Models Tab</a>
+          <div class='blue-gradient'>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <h1 class="mainTitle-white">
+                  Our Mission
+              </h1>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
           </div>
-          <div class="mainBody-tile">
-            <h3>Porky Productions Developments</h3>
-            <p>
-              Porky Productions also specialize in building software that can change the world. Our Developments can be seen here!
-            </p>
-            <a href="develop.html">Developments Tab</a>
+          <br>
+          <div>
+              <p class="mainBody">
+                  Here at PorkyProductions© we are on a mission to create technology that can change the world. <br>
+                  Whether it be a game, a model, or a software development, we are dedicated to positively impacting the world. <br>
+                  We chose to do this because we believe that technology (when used in the right ways) can and will positively impact humanity. <br>
+                  We believe that technology can be used to create a better world, and that we can use technology to help us do that. <br>
+                  Join us as we create technology that can change the world!
+              </p>
           </div>
+          <br>
+          <div class='blue-purp-gradient'>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <h1 class="mainTitle-white">
+                  Who We Are
+              </h1>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+          </div>
+          <br>
+          <br>
+          <div class="mainBody-grid">
+              <div class="mainBody-tile">
+                  <h3>Tristan</h3>
+                  <h5> (HedgehogDubz) </h5>
+                  <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210px" alt="tristan's avatar" />
+                  <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt ex qui dolorum a obcaecati sequi amet tempora alias, nisi ea, nam nostrum commodi deleniti. Tempora facilis similique culpa fuga!.
+                  </p>
+              </div>
+              <div class="mainBody-tile">
+                  <h3>Ryan</h3>
+                  <h5> (hiteacheryouare) </h5>
+                  <img src="https://avatars.githubusercontent.com/u/82683251?v=4" alt="ryan's avatar" />
+                  <p>
+                      Ryan is a software developer as a hobbiest.
+                      He is currently learning many differnt languages and their use cases.
+                      Some of these languages include: HTML, CSS, JavaScript, Python, C#, TypeScript, and Kotlin.
+                      Ryan is working on a variety of projects which you can see in his <a href="https://github.com/hiteacheryouare/projects">GitHub repository</a>
+                  </p>
+              </div>
+          </div>
+          <div class='red-orange-gradient'>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <h1 class="mainTitle-white">
+                  The Story
+              </h1>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+          </div>
+          <br>
+          <br>
+          <!--BEYOND THIS POINT IS THE FOOTER -- NO TOUCHING OR ELSE IT WILL BREAK-->
+          <div class="footer">
+              <br>
+              <br>
+              <img src="assets/PPio logo.png" width="25%" alt="porky productions logo" />
+              <br>
+              <p>
+                  Porky Productions is a group of highly established individuals namely
+                  Tristan and Ryan, who are on the path for technological development
+                  in many areas. This website is meant to showcase our accomplishments
+                  as well as to create something that we can be proud about.
+              </p>
+              <a class="center" href="index.html">Home</a>
+              <a class="center" href="games.html">Games</a>
+              <a class="center" href="3DPrints.html">3D Prints</a>
+              <a class="center" href="Models.html">Models</a>
+              <a class="center" href="develop.html">Developments</a>
+              <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
+          </div>
+
       </div>
-      <div class='blue-gradient'>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h1 class="mainTitle-white">
-          Our Mission
-        </h1>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-      </div>
-      <br>
-      <div>
-        <p class="mainBody">
-         Here at PorkyProductions© we are on a mission to create technology that can change the world. <br>
-         Whether it be a game, a model, or a software development, we are dedicated to positively impacting the world. <br>
-         We chose to do this because we believe that technology (when used in the right ways) can and will positively impact humanity. <br>
-         We believe that technology can be used to create a better world, and that we can use technology to help us do that. <br>
-         Join us as we create technology that can change the world!
-        </p>
-      </div>
-      <br>
-      <div class='blue-purp-gradient'>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h1 class="mainTitle-white">
-          Who We Are
-        </h1>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-      </div>
-      <br>
-      <br>
-      <div class="mainBody-grid">
-        <div class="mainBody-tile">
-          <h3>Tristan</h3>
-          <h5> (HedgehogDubz) </h5>
-          <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210px" alt="tristan's avatar" />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt ex qui dolorum a obcaecati sequi amet tempora alias, nisi ea, nam nostrum commodi deleniti. Tempora facilis similique culpa fuga!.
-          </p>
-        </div>
-        <div class="mainBody-tile">
-          <h3>Ryan</h3>
-          <h5> (hiteacheryouare) </h5>
-          <img src="https://avatars.githubusercontent.com/u/82683251?v=4" alt="ryan's avatar" />
-          <p>
-            Ryan is a software developer as a hobbiest.
-            He is currently learning many differnt languages and their use cases.
-            Some of these languages include: HTML, CSS, JavaScript, Python, C#, TypeScript, and Kotlin.
-            Ryan is working on a variety of projects which you can see in his <a href="https://github.com/hiteacheryouare/projects">GitHub repository</a>
-          </p>
-        </div>
-      </div>
-      <br>
-      <br>
-      <div class="footer">
-        <br>
-        <br>
-        <img src="assets/PPio logo.png" width="25%" alt="porky productions logo"/>
-        <br>
-        <p>
-          Porky Productions is a group of highly established individuals namely
-          Tristan and Ryan, who are on the path for technological development
-          in many areas. This website is meant to showcase our accomplishments
-          as well as to create something that we can be proud about.
-        </p>
-        <a class="center" href="index.html">Home</a>
-        <a class="center" href="games.html">Games</a>
-        <a class="center" href="3DPrints.html">3D Prints</a>
-        <a class="center" href="Models.html">Models</a>
-        <a class="center" href="develop.html">Developments</a>
-        <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
-      </div>
-       
-    </div>
   </body>
 </html>
