added more padding to origin story. Looks better on the eyes

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <br>
           <br>
           <h1 class="mainTitle">The PorkyProductions Origin Story</h1>
-          <p class="mainBody">
+          <p class="mainBodyAlt">
               Our story begins in 2017, when our founders, Tristan and Ryan met in school. 
               They became friends and eventually discorvered that they could make a website using the "Google Sites" service.
               What better thing to make a website about than a hedgehog pencil sharpener that Tristan had brought to school and named "Porky"
