--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
           <br>
           <br>
           <div class="mainBody-grid">
+              <h1 class="mainTitle">Our Founders</h1>
               <div class="mainBody-tile">
                   <h3>Tristan</h3>
                   <h5> (HedgehogDubz) </h5>
@@ -234,9 +235,9 @@
           <p class="mainBodyAlt">
               Our story begins in 2017, when our founders, Tristan and Ryan met in school. 
               They became friends and eventually discorvered that they could make a website using the "Google Sites" service.
-              What better thing to make a website about than a hedgehog pencil sharpener that Tristan had brought to school and named "Porky"
+              What better thing to make a website about than a hedgehog pencil sharpener that Tristan had brought to school and named "Porky".
               After this website (PorkyPictures.inc) was created, many other websites followed such as PorkySchool.edu, PorkyPizza.eat, and PorkyBlackHolesThatWillDestroyTheEntireUniverseSoYouProbablyShouldntUseThem.com.com.inc
-              At this point, Porky had developed a cult following. But then, sadly a hater of porky stole the pencil sharpener, and destroyed it.
+              At this point, Porky had developed a cult following. But then, sadly, a hater of porky stole the pencil sharpener, and destroyed it.
               However, at the last moment, Porky transferred into a Hedgehog plush, where it resides to this day. 
               Later on, the old websites were archived, and consolidated into one company, called PorkyProductions, which is where we are today.
           </p>
