added a header to the new sections

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
           </div>
           <br>
           <div>
+              <h1 class="mainTitle">Mission Statement</h1>
               <p class="mainBody">
                   Here at PorkyProductions© we are on a mission to create technology that can change the world. <br>
                   Whether it be a game, a model, or a software development, we are dedicated to positively impacting the world. <br>
