--- a/index.html
+++ b/index.html
@@ -268,3 +268,4 @@
       </div>
   </body>
 </html>
+<!--Hi there reader. It looks like youve reached the end of our code. Thats pretty cool. Have you been working this entire time? Maybe give yourself a break. You work more productive when youre not tired :) -->
